2004-10-24  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Avatar.h: Add sigc++/connection.h include for sigc++ 2.0.

2004-10-24  James Turner  <james@worldforge.org>

    * Eris/Avatar.cpp: fix the implementation of the various pick / take /
      drop / move methods. Testing required, also feedback on the API.

2004-10-24  James Turner  <james@worldforge.org>

    * Eris/Entity.cpp: fix second argument to onLocationChanged in
      setLocation, thinko error.
      
    * Eris/Entity.cpp: add virtual init() method, so processing of initial
      Entity state happens after the vtbl is fully constructed.
      
    * Eris/View.cpp: call init() on newly created Entities.
    
    * Eris/View.cpp: ensure that the InitialSight signal is emitted on the
      entity creation path.

2004-10-22  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Entity.cpp: Handle orientation in the new
	  setPosAndVelocityFromAtlas() method.

2004-10-22  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Entity.cpp, Eris/IGRouter.cpp, Eris/EntityRouter.cpp: change
	  how position and velocity updates are handled, to ensure a SET op
	  can never modify them. 
	  
	* test/controller.cpp: add more test functions to modify the stub
	  server's world

2004-10-22  Al Riddoch  <alriddoch@zepler.org>

	* test/agent.cpp, test/controller.cpp, test/stubServer.cpp:
	  Add newlines to ends of files as required.

2004-10-19  James Turner  <james@worldforge.org>

	* CHANGES-1.4: add this file, summarising the API and internal changes
	  since the 1.2 series, and giving some hints on migrating to the new API
	  
	* Makefile.am: add CHANGES-1.4 to EXTRA_DIST

2004-10-19  James Turner  <james@worldforge.org>

	* configure.ac: require Atlas-C++ >= 0.5.91	
	* tests/Makefile.am: add missing files so make distcheck works
	* NEWS: updates describing development release
	
2004-10-19  James Turner  <james@worldforge.org>

	* Eris/Entity.cpp, Eris/Entity.h: rename the over-rideable hook